# Weightly

./: .gitignore  README.md  class_mapping.txt  dataset.yaml  example.py  pre.py  preproccess.py  pyproject.toml  selenium-wood-scraping-chromedriver-py.py  train.py  yolov8-multi-class-dataset-preparation.py  yolov8-multi-class-training-script.py
