[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["Or Basker <or.basker@ridewithvia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.2.31"
numpy = "^1.26.4"
opencv-python = "^4.10.0.82"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
